--- a/tv-details.html
+++ b/tv-details.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="lib/fontawesome.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
+    <link rel="icon" href="./images/flixx.svg" />
     <script src="js/script.js" defer></script>
     <title>Flixx | Show Details</title>
   </head>
